fix button wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -679,6 +679,7 @@ p {
 }
 
 #hero .btns {
+  flex-wrap: wrap;
   margin-top: 30px;
   display: flex;  /* Set the btns container to be a flex container */
   align-items: center;  /* Vertically align the content in the center */
@@ -696,6 +697,8 @@ p {
   text-transform: uppercase;
   display: inline-block;
   padding: 12px 30px;
+  margin-top: 10px;
+  margin-left: 10px;
   border-radius: 50px;
   transition: 0.3s;
   line-height: 1;
@@ -707,10 +710,6 @@ p {
 #hero .btn-book:hover {
   background: #cda45e;
   color: #fff;
-}
-
-#hero .btn-book {
-  margin-left: 15px;
 }
 
 #hero .play-btn {
@@ -851,7 +850,7 @@ p {
   text-decoration: none; /* Remove underline */
 }
 
-@media (max-width: 1366px) {
+@media (max-width: 767px) {
   .btns .dropdown .dropdown ul {
     left: -90%;
   }
